--- a/registro/styles.css
+++ b/registro/styles.css
@@ -11,11 +11,16 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url("/images/php6wV0bn.png") no-repeat;
-    background-size: cover;
-    background-position: center;
+    background: linear-gradient(to bottom, rgba(15, 50, 40, 0.95), rgba(30, 70, 50, 0.8), rgba(100, 80, 20, 0.3));
+    background-attachment: fixed; /* ¡Clave! Fija el gradiente al viewport */
 }
 
+a{
+    text-decoration: none; /* Elimina el subrayado */
+    color: inherit;       /* Hereda el color del texto del padre */
+    cursor: default;
+    cursor: pointer;
+}
 
 .contenedor{
     width: 420px;
