--- a/login/styles.css
+++ b/login/styles.css
@@ -12,8 +12,7 @@ body{
     align-items: center;
     gap: 100px;
     min-height: 100vh;
-    background: linear-gradient(to bottom, rgba(15, 50, 40, 0.95), rgba(30, 70, 50, 0.8), rgba(100, 80, 20, 0.3));
-    background-attachment: fixed; /* ¡Clave! Fija el gradiente al viewport */
+    background: url("/images/php6wV0bn.png");
     background-size: cover;
     background-position: center;
 }
