--- a/nosotros/quienes_somos.css
+++ b/nosotros/quienes_somos.css
@@ -6,8 +6,7 @@
 }
 
 body {
-    background: linear-gradient(to bottom, rgba(15, 50, 40, 0.95), rgba(30, 70, 50, 0.8), rgba(100, 80, 20, 0.3));
-    background-attachment: fixed;
+    background: url("/images/php6wV0bn.png");
     min-height: 100vh;
     display: flex;
     justify-content: center;
