--- a/partida/partida.css
+++ b/partida/partida.css
@@ -10,11 +10,11 @@ a{
   color: inherit;       /* Hereda el color del texto del padre */
   cursor: default;
   cursor: pointer;
+  color: white;
 }
 
 body {
-  background: linear-gradient(to bottom, rgba(15, 50, 40, 0.95), rgba(30, 70, 50, 0.8), rgba(100, 80, 20, 0.3));
-  background-attachment: fixed;
+  background: url("/images/php6wV0bn.png");
   min-height: 100vh;
 }
 
@@ -27,6 +27,10 @@ body {
 
 .contenido-ajedrez main {
   position: relative;
+}
+
+h1{
+  color: white;
 }
 
 .contenido-ajedrez h1, 
@@ -60,6 +64,17 @@ body {
 .negra {
   background-color: #B58863;
   color: black;
+}
+
+.turno{
+  color: white;
+}
+
+.movimientos{
+  color: white;
+}
+.invitar{
+  color: white;
 }
 
 .contenido-ajedrez p {
