--- a/perfil/styles.css
+++ b/perfil/styles.css
@@ -9,8 +9,7 @@
 html, body{
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom, rgba(15, 50, 40, 0.95), rgba(30, 70, 50, 0.8), rgba(100, 80, 20, 0.3));
-    background-attachment: fixed; /* ¡Clave! Fija el gradiente al viewport */
+    background: url("/images/php6wV0bn.png");
 }
 
 
@@ -448,7 +447,6 @@ input[type="radio"] {
       }
     
       .cerrar p {
-        color: black;
         padding: 10px 25px;
         font-size: 15px;
         white-space: nowrap;
