--- a/registro/styles.css
+++ b/registro/styles.css
@@ -11,8 +11,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(to bottom, rgba(15, 50, 40, 0.95), rgba(30, 70, 50, 0.8), rgba(100, 80, 20, 0.3));
-    background-attachment: fixed; /* ¡Clave! Fija el gradiente al viewport */
+    background: url("/images/php6wV0bn.png");
 }
 
 a{
