--- a/pp/styles.css
+++ b/pp/styles.css
@@ -23,6 +23,7 @@ body{
     align-items: center;
     min-height: 100vh;
     background: url("/images/php6wV0bn.png");
+    background-size: 100% 100%;
 }
 .titulo {
     position: absolute;
