--- a/perfil/styles.css
+++ b/perfil/styles.css
@@ -10,6 +10,7 @@ html, body{
     width: 100%;
     height: 100%;
     background: url("/images/php6wV0bn.png");
+    background-size: 100% 100%;
 }
 
 
