--- a/partida/partida.css
+++ b/partida/partida.css
@@ -17,6 +17,7 @@ body {
   background: url("/images/php6wV0bn.png");
   background-size: 100% 100%;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 .contenido-ajedrez {
