Redisposición carpetas y arreglo según servidor

--- a/styles-login.css
+++ b/styles-login.css
@@ -12,7 +12,7 @@ body{
     align-items: center;
     gap: 100px;
     min-height: 100vh;
-    background: url("/images/php6wV0bn.png");
+    background: url("/php6wv0bn.png");
     background-size: 100% 100%;
     background-position: center;
 }
