--- a/styles-registro.css
+++ b/styles-registro.css
@@ -11,7 +11,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url("/images/php6wV0bn.png");
+    background: url("/php6wv0bn.png");
     background-size: 100% 100%;
 }
 
