--- a/styles-partida.css
+++ b/styles-partida.css
@@ -14,7 +14,7 @@ a{
 }
 
 body {
-  background: url("/images/php6wV0bn.png");
+  background: url("/php6wv0bn.png");
   background-size: 100% 100%;
   min-height: 100vh;
   overflow-x: hidden;
