--- a/styles-pp.css
+++ b/styles-pp.css
@@ -22,7 +22,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url("/images/php6wV0bn.png");
+    background: url("/php6wv0bn.png");
     background-size: 100% 100%;
 }
 .titulo {
@@ -555,8 +555,3 @@ tr:hover {
     }
 
 } 
-
-
-
-
-
